# important_nots

embedding_testing-master/: config.py  main.py  pyproject.toml
embedding_testing-master/codes/: snippet_01_button.jsx  snippet_02_search_bar.jsx  snippet_03_data_table.jsx  snippet_04_modal.jsx  snippet_05_form.jsx  snippet_06_sidebar.jsx  snippet_07_toast.jsx  snippet_08_pagination.jsx  snippet_09_card.jsx  snippet_10_dashboard_layout.jsx
embedding_testing-master/db/: chunker.py  embedder.py  ingest.py  llm_ans.py  query.py  schema.py
embedding_testing-master/markdown_files/: components_overview.md  example_queries.md  props_reference.md  usage_patterns.md
