[project]
name = "embedding-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.11",
    "numpy>=2.4.3",
    "openai>=2.29.0",
    "pandas>=3.0.1",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.3.0",
    "tiktoken>=0.12.0",
    "transformers>=5.3.0",
    "tree-sitter>=0.25.2",
    "uvicorn>=0.42.0",
]
